cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


#ADD_DEFINITIONS(-D_DEBUG)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(serverManager)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
