cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
#ADD_DEFINITIONS(-DBOOST_ASIO_DISABLE_STD_ATOMIC)

ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(serverManager)
ADD_SUBDIRECTORY(memcachedClient)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(log)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(example)
