INCLUDE(CollectSrcs)
PROJECT(Common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(Common_SUBDIRS )

GET_SRCS(Common_SRCLISTS Common_SUBDIRS)
ADD_LIBRARY(Common ${Common_SRCLISTS})

TARGET_LINK_LIBRARIES(Common boost_filesystem)
TARGET_LINK_LIBRARIES(Common boost_system)

INSTALL(TARGETS Common 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Common/
    DESTINATION include/Common
    FILES_MATCHING PATTERN "*.h")


