INCLUDE(CollectSrcs)
PROJECT(SyncGet)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/serverManager)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(SyncGet_SUBDIRS )
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

GET_SRCS(SyncGet_SRCLISTS SyncGet_SUBDIRS)
ADD_EXECUTABLE(SyncGet ${SyncGet_SRCLISTS})

TARGET_LINK_LIBRARIES(SyncGet network)
TARGET_LINK_LIBRARIES(SyncGet serverManager)
TARGET_LINK_LIBRARIES(SyncGet memclient)
TARGET_LINK_LIBRARIES(SyncGet boost_log)

INSTALL(TARGETS SyncGet 
    RUNTIME DESTINATION bin
    )


