INCLUDE(CollectSrcs)
PROJECT(example)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/serverManager)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

ADD_EXECUTABLE(SyncGet SyncGet.cpp)
ADD_EXECUTABLE(AsyncGet AsyncGet.cpp)

TARGET_LINK_LIBRARIES(SyncGet network)
TARGET_LINK_LIBRARIES(SyncGet serverManager)
TARGET_LINK_LIBRARIES(SyncGet memclient)
TARGET_LINK_LIBRARIES(SyncGet boost_log)

TARGET_LINK_LIBRARIES(AsyncGet network)
TARGET_LINK_LIBRARIES(AsyncGet serverManager)
TARGET_LINK_LIBRARIES(AsyncGet memclient)
#TARGET_LINK_LIBRARIES(AsyncGet boost_log)
TARGET_LINK_LIBRARIES(AsyncGet boost_program_options)

INSTALL(TARGETS SyncGet AsyncGet
    RUNTIME DESTINATION bin
    )


