INCLUDE(CollectSrcs)
PROJECT(Log)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
LINK_DIRECTORIES($ENV{BOOST_LIB})
SET(Log_SUBDIRS )

GET_SRCS(Log_SRCLISTS Log_SUBDIRS)
ADD_LIBRARY(Log ${Log_SRCLISTS})


ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
ADD_DEFINITIONS(-DBUILDING_LOG)

TARGET_LINK_LIBRARIES(Log common)
TARGET_LINK_LIBRARIES(Log boost_log_setup)
TARGET_LINK_LIBRARIES(Log boost_log)
TARGET_LINK_LIBRARIES(Log boost_filesystem)
TARGET_LINK_LIBRARIES(Log boost_system)
TARGET_LINK_LIBRARIES(Log boost_thread)
TARGET_LINK_LIBRARIES(Log boost_system)

INSTALL(TARGETS Log 
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Log/
    DESTINATION include/Log
    FILES_MATCHING PATTERN "*.h")


