INCLUDE(CollectSrcs)
PROJECT(network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
LINK_DIRECTORIES($ENV{BOOST_LIB})
SET(network_SUBDIRS )

GET_SRCS(network_SRCLISTS network_SUBDIRS)
ADD_LIBRARY(network ${network_SRCLISTS})

TARGET_LINK_LIBRARIES(network boost_system)

INSTALL(TARGETS network 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/network/
    DESTINATION include/network
    FILES_MATCHING PATTERN "*.h")


