INCLUDE(CollectSrcs)
PROJECT(network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
LINK_DIRECTORIES($ENV{BOOST_LIB})
SET(network_SUBDIRS )

ADD_DEFINITIONS(-DBUILDING_NETWORK)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

GET_SRCS(network_SRCLISTS network_SUBDIRS)
ADD_LIBRARY(network ${network_SRCLISTS})

TARGET_LINK_LIBRARIES(network boost_system)
TARGET_LINK_LIBRARIES(network Log)

INSTALL(TARGETS network 
    RUNTIME DESTINATION lib
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/network/
    DESTINATION include/network
    FILES_MATCHING PATTERN "*.h")


