INCLUDE(CollectSrcs)
PROJECT(serverManager)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/utils)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(serverManager_SUBDIRS )

GET_SRCS(serverManager_SRCLISTS serverManager_SUBDIRS)
ADD_LIBRARY(serverManager ${serverManager_SRCLISTS})

TARGET_LINK_LIBRARIES(serverManager network)
TARGET_LINK_LIBRARIES(serverManager utils)

INSTALL(TARGETS serverManager 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/serverManager/
    DESTINATION include/serverManager
    FILES_MATCHING PATTERN "*.h")


