INCLUDE(CollectSrcs)
PROJECT(memclient)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/serverManager)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

ADD_DEFINITIONS(-D_MEMCACHED_CLIENT_COMPILE)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
SET(memclient_SUBDIRS )

GET_SRCS(memclient_SRCLISTS memclient_SUBDIRS)
ADD_LIBRARY(memclient ${memclient_SRCLISTS})

TARGET_LINK_LIBRARIES(memclient network)
TARGET_LINK_LIBRARIES(memclient serverManager)
TARGET_LINK_LIBRARIES(memclient boost_thread)
#TARGET_LINK_LIBRARIES(memclient boost_log)
#TARGET_LINK_LIBRARIES(memclient boost_log_setup)
TARGET_LINK_LIBRARIES(memclient pthread)

INSTALL(TARGETS memclient 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/src/
    DESTINATION include/memclient
    FILES_MATCHING PATTERN "*.h")


