INCLUDE(CollectSrcs)
PROJECT(memtest)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/serverManager)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(memtest_SUBDIRS )

GET_SRCS(memtest_SRCLISTS memtest_SUBDIRS)
ADD_EXECUTABLE(memtest ${memtest_SRCLISTS})

TARGET_LINK_LIBRARIES(memtest boost_system)
TARGET_LINK_LIBRARIES(memtest boost_unit_test_framework)

INSTALL(TARGETS memtest 
    RUNTIME DESTINATION bin)



