INCLUDE(CollectSrcs)
PROJECT(memtest)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/serverManager)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

LINK_DIRECTORIES($ENV{BOOST_LIB})
SET(memtest_SUBDIRS )

IF(UNIX)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)
ENDIF(UNIX)

ADD_DEFINITIONS(-DBOOST_SYSTEM_NO_DEPRECATED)
SET(memtest_SRCLISTS SharedBufferTest.cpp)
ADD_EXECUTABLE(memtest ${memtest_SRCLISTS})

TARGET_LINK_LIBRARIES(memtest boost_unit_test_framework)
TARGET_LINK_LIBRARIES(memtest boost_system)


PROJECT(logTest)
IF(UNIX)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
ENDIF(UNIX)
SET(logTest_SRCLISTS LogTest.cpp)
ADD_EXECUTABLE(logTest ${logTest_SRCLISTS})
TARGET_LINK_LIBRARIES(logTest Log)
TARGET_LINK_LIBRARIES(logTest boost_log)
TARGET_LINK_LIBRARIES(logTest boost_log_setup)
TARGET_LINK_LIBRARIES(logTest boost_filesystem)

IF(UNIX)
TARGET_LINK_LIBRARIES(logTest pthread)
ENDIF(UNIX)

INSTALL(TARGETS memtest logTest
    RUNTIME DESTINATION bin
    )
INSTALL(DIRECTORY conf
    DESTINATION bin/)



