INCLUDE(CollectSrcs)
PROJECT(utils)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(utils_SUBDIRS )

ADD_DEFINITIONS(-DBUILDING_UTILS)
GET_SRCS(utils_SRCLISTS utils_SUBDIRS)
ADD_LIBRARY(utils ${utils_SRCLISTS})

INSTALL(TARGETS utils 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/utils/
    DESTINATION include/utils
    FILES_MATCHING PATTERN "*.h")


